[package]
name = "distributed_journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = "4.0"
tracing = "0.1"
log = "0.4"
env_logger = "0.9" # Added env_logger
memmap2 = "0.9"
crc32fast = "1.3"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.0"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.10"
assert_matches = "1.5"
